tests/baselines/reference/errorRecoveryInClassDeclaration.errors.txt
errorRecoveryInClassDeclaration.ts(3,17): error TS2304: Cannot find name 'foo'.
errorRecoveryInClassDeclaration.ts(4,13): error TS2304: Cannot find name 'public'.
errorRecoveryInClassDeclaration.ts(4,20): error TS1005: ',' expected.
errorRecoveryInClassDeclaration.ts(4,20): error TS2304: Cannot find name 'blaz'.
errorRecoveryInClassDeclaration.ts(4,27): error TS1005: ',' expected.


==== errorRecoveryInClassDeclaration.ts (5 errors) ====
    class C {
        public bar() {
            var v = foo(
                    ~~~
!!! error TS2304: Cannot find name 'foo'.
                public blaz() {}
                ~~~~~~
!!! error TS2304: Cannot find name 'public'.
                       ~~~~
!!! error TS1005: ',' expected.
                       ~~~~
!!! error TS2304: Cannot find name 'blaz'.
                              ~
!!! error TS1005: ',' expected.
                );
        }
    }